--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,5 +4,7 @@
 
     <item
         android:id="@+id/logout_menu"
-        android:title="@string/logout" />
+        android:orderInCategory="100"
+        android:title="@string/logout"
+        app:showAsAction="never" />
 </menu>
