--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="azul_background">#FF0569F5</color>
     <color name="white">#FFFFFFFF</color>
     <color name="azul_100">#FF0500F5</color>
+    <color name="icon_background">#FF00B702</color>
+    <color name="button_color">#FF34495E</color>
 
     <array name="blues">
         <item>@color/md_blue_500</item>
